@@ -1,11 +1,9 @@
 package org.geneontology.obographs.owlapi;
 
 import com.github.jsonldjava.core.Context;
-import org.geneontology.obographs.core.model.AbstractNode.RDFTYPES;
 import org.geneontology.obographs.core.model.*;
-import org.geneontology.obographs.core.model.Node.Builder;
 import org.geneontology.obographs.core.model.axiom.*;
-import org.geneontology.obographs.core.model.meta.AbstractSynonymPropertyValue.SCOPES;
+import org.geneontology.obographs.core.model.meta.AbstractSynonymPropertyValue.Scope;
 import org.geneontology.obographs.core.model.meta.BasicPropertyValue;
 import org.geneontology.obographs.core.model.meta.DefinitionPropertyValue;
 import org.geneontology.obographs.core.model.meta.SynonymPropertyValue;
@@ -17,8 +15,6 @@ import org.slf4j.LoggerFactory;
 import javax.annotation.Nullable;
 import java.util.*;
 import java.util.stream.Collectors;
-
-import org.geneontology.obographs.core.model.AbstractNode.PropertyType;
 
 /**
  * Implements OWL to OG translation
@@ -73,9 +69,6 @@ public class FromOwl {
      */
     public Graph generateGraph(OWLOntology ontology) {
 
-        SynonymVocabulary synonymVocabulary = new SynonymVocabulary();
-
-
         OWLOntologyID ontId = ontology.getOntologyID();
         String graphId = ontId.getOntologyIRI().isPresent() ? getNodeId(ontId.getOntologyIRI().get()) : "";
         String version = ontId.getVersionIRI().isPresent() ? getNodeId(ontId.getVersionIRI().get()) : "";
@@ -89,306 +82,12 @@ public class FromOwl {
 
         // iterate over all axioms and push to relevant builders
         for (OWLAxiom ax : sortedAxioms) {
-
             Meta meta = buildMeta(ax);
-
-            if (ax instanceof OWLDeclarationAxiom) {
-                OWLDeclarationAxiom dax = ((OWLDeclarationAxiom) ax);
-                OWLEntity e = dax.getEntity();
-                String id = e.getIRI().toString();
-                if (e instanceof OWLClass) {
-                    oboGraphBuilder.addNodeType(id, RDFTYPES.CLASS);
-                } else if (e instanceof OWLDataProperty) {
-                    oboGraphBuilder.addNodeType(id, PropertyType.DATA);
-                } else if (e instanceof OWLObjectProperty) {
-                    oboGraphBuilder.addNodeType(id, PropertyType.OBJECT);
-                } else if (e instanceof OWLAnnotationProperty) {
-                    oboGraphBuilder.addNodeType(id, PropertyType.ANNOTATION);
-                } else if (e instanceof OWLNamedIndividual) {
-                    oboGraphBuilder.addNodeType(id, RDFTYPES.INDIVIDUAL);
-                }
-            } else if (ax instanceof OWLLogicalAxiom) {
-                // LOGICAL AXIOMS
-
-                if (ax instanceof OWLSubClassOfAxiom) {
-                    // SUBCLASS
-
-                    OWLSubClassOfAxiom sca = (OWLSubClassOfAxiom) ax;
-                    OWLClassExpression subc = sca.getSubClass();
-                    OWLClassExpression supc = sca.getSuperClass();
-
-                    if (subc.isAnonymous()) {
-                        // GCI
-
-                        /*
-                         * TBD: Model for GCIs. See https://github.com/obophenotype/uberon/wiki/Evolutionary-variability-GCIs
-                        if (subc instanceof OWLObjectIntersectionOf) {
-                            OBOClassDef cdef = getClassDef(((OWLObjectIntersectionOf)subc).getOperands());
-                            if (cdef.genusClassIds.size() == 1) {
-                                subj = cdef.genusClassIds.get(0);
-                            }
-
-                            if (subc instanceof OWLObjectSomeValuesFrom) {
-                                // Some axioms such as phylogenetic GCIs are encoded this way
-                                ExistentialRestrictionExpression r = getRestriction(subc);
-                                subj = r.getFillerId();
-                            }
-                        }
-                         */
-
-                    } else if (subc.isNamed()) {
-                        // SUBJECT IS NAMED CLASS (non-GCI)
-                        String subj = getClassId((OWLClass) subc);
-
-                        oboGraphBuilder.addNodeType(subj, RDFTYPES.CLASS);
-
-                        if (supc.isAnonymous()) {
-                            if (supc instanceof OWLObjectSomeValuesFrom) {
-                                ExistentialRestrictionExpression r = getRestriction(supc);
-                                if (r == null) {
-                                    oboGraphBuilder.addUntranslatedAxiom(sca);
-                                } else {
-                                    oboGraphBuilder.addEdge(subj, r.getPropertyId(), r.getFillerId(), meta);
-                                }
-                            } else if (supc instanceof OWLObjectAllValuesFrom) {
-                                OWLObjectAllValuesFrom avf = (OWLObjectAllValuesFrom) supc;
-                                OWLObjectPropertyExpression property = avf.getProperty();
-                                if (property instanceof OWLObjectProperty) {
-                                    if (avf.getFiller().isNamed()) {
-                                        String propertyId = getPropertyId(property);
-                                        DomainRangeAxiom domainRangeAxiom = oboGraphBuilder.getDomainRangeAxiomBuilder(propertyId).build();
-                                        Edge edge = buildEdge(subj,
-                                                //TODO CHECK!!!
-                                                domainRangeAxiom.getPredicateId(),
-                                                getClassId(avf.getFiller().asOWLClass()),
-                                                meta);
-                                        oboGraphBuilder.addPropertyEdgeDefinitions(propertyId, edge);
-                                    } else {
-                                        oboGraphBuilder.addUntranslatedAxiom(sca);
-                                    }
-                                } else if (property instanceof OWLObjectInverseOf) {
-                                    OWLObjectInverseOf iop = (OWLObjectInverseOf) property;
-                                    if (avf.getFiller().isNamed() && iop.isNamed()) {
-                                        String pid = getPropertyId(iop.getInverse());
-                                        Edge edge = buildEdge(subj, INVERSE_OF, pid, meta);
-                                        oboGraphBuilder.addPropertyEdgeDefinitions(pid, edge);
-                                    } else {
-                                        oboGraphBuilder.addUntranslatedAxiom(sca);
-                                    }
-                                }
-                            }
-                        } else {
-                            oboGraphBuilder.addEdge(subj, SUBCLASS_OF, getClassId((OWLClass) supc), meta);
-                        }
-                    } else {
-                        // Logically impossible to reach this? subj is either named or anonymous
-                        oboGraphBuilder.addUntranslatedAxiom(sca);
-                    }
-                } else if (ax instanceof OWLClassAssertionAxiom) {
-                    OWLClassAssertionAxiom ca = (OWLClassAssertionAxiom) ax;
-
-                    String subj = getIndividualId(ca.getIndividual());
-                    String obj;
-                    OWLClassExpression cx = ca.getClassExpression();
-                    if (cx.isAnonymous()) {
-                        oboGraphBuilder.addUntranslatedAxiom(ca);
-                        continue;
-                    } else {
-                        obj = getClassId(cx.asOWLClass());
-                    }
-                    oboGraphBuilder.addEdge(subj, TYPE, obj, meta);
-                    oboGraphBuilder.addNodeId(subj); // always include
-                    oboGraphBuilder.addNodeId(obj); // always include
-
-                } else if (ax instanceof OWLObjectPropertyAssertionAxiom) {
-                    OWLObjectPropertyAssertionAxiom opa = (OWLObjectPropertyAssertionAxiom) ax;
-
-                    String subj = getIndividualId(opa.getSubject());
-                    String obj = getIndividualId(opa.getObject());
-                    if (opa.getProperty().isAnonymous()) {
-                        oboGraphBuilder.addUntranslatedAxiom(opa);
-                    } else {
-                        String pred = getPropertyId(opa.getProperty());
-                        oboGraphBuilder.addEdge(subj, pred, obj, meta);
-                    }
-                    // always include subject node of an OPA
-                    oboGraphBuilder.addNodeId(subj);
-                } else if (ax instanceof OWLEquivalentClassesAxiom) {
-                    // EQUIVALENT
-                    OWLEquivalentClassesAxiom eca = (OWLEquivalentClassesAxiom) ax;
-                    List<OWLClassExpression> xs = eca.getClassExpressionsAsList();
-                    List<OWLClassExpression> anonXs = xs.stream()
-                            .filter(IsAnonymous::isAnonymous)
-                            .collect(Collectors.toUnmodifiableList());
-                    List<OWLClassExpression> namedXs = xs.stream()
-                            .filter(IsAnonymous::isNamed)
-                            .collect(Collectors.toUnmodifiableList());
-                    if (anonXs.isEmpty()) {
-                        Set<String> xClassIds = namedXs.stream()
-                                .map(x -> getClassId((OWLClass) x))
-                                .collect(Collectors.toCollection(LinkedHashSet::new));
-                        // EquivalentNodesSet
-                        // all classes in equivalence axiom are named
-                        // TODO: merge pairwise assertions into a clique
-                        //TODO: EquivalentNodesSet.representativeNodeId() is not set in the production code!!
-                        EquivalentNodesSet enset = new EquivalentNodesSet.Builder().nodeIds(xClassIds).meta(nullIfEmpty(meta)).build();
-                        oboGraphBuilder.addEquivalentNodesSet(enset);
-                    } else {
-                        // possibilities are:
-                        //  - LogicalDefinitionAxiom
-                        //  - TBD
-
-                        if (anonXs.size() == 1 && namedXs.size() == 1) {
-
-                            OWLClassExpression anonX = anonXs.get(0);
-                            if (anonX instanceof OWLObjectIntersectionOf) {
-
-                                Set<OWLClassExpression> ixs = ((OWLObjectIntersectionOf) anonX).getOperands();
-
-                                OBOClassDef classDef = getClassDef(ixs);
-                                if (classDef != null && !classDef.restrs.contains(null)) {
-                                    LogicalDefinitionAxiom lda = new LogicalDefinitionAxiom.Builder()
-                                            .definedClassId(getClassId((OWLClass) namedXs.get(0)))
-                                            .genusIds(classDef.genusClassIds)
-                                            .restrictions(classDef.restrs)
-                                            .build();
-                                    oboGraphBuilder.addLogicalDefinitionAxiom(lda);
-                                } else {
-                                    oboGraphBuilder.addUntranslatedAxiom(eca);
-                                }
-                            }
-                        }
-                    }
-                } else if (ax instanceof OWLObjectPropertyAxiom) {
-                    if (ax instanceof OWLSubObjectPropertyOfAxiom) {
-                        OWLSubObjectPropertyOfAxiom spa = (OWLSubObjectPropertyOfAxiom) ax;
-                        if (spa.getSubProperty().isNamed() && spa.getSuperProperty().isNamed()) {
-                            String subj = getPropertyId(spa.getSubProperty());
-                            String obj = getPropertyId(spa.getSuperProperty());
-                            oboGraphBuilder.addEdge(subj, SUBPROPERTY_OF, obj, meta);
-                        }
-
-                    } else if (ax instanceof OWLInverseObjectPropertiesAxiom) {
-                        OWLInverseObjectPropertiesAxiom ipa = (OWLInverseObjectPropertiesAxiom) ax;
-                        if (ipa.getFirstProperty().isNamed() && ipa.getSecondProperty().isNamed()) {
-                            String p1 = getPropertyId(ipa.getFirstProperty());
-                            String p2 = getPropertyId(ipa.getSecondProperty());
-                            oboGraphBuilder.addEdge(p1, INVERSE_OF, p2, meta);
-                        }
-                    } else if (ax instanceof OWLSubPropertyChainOfAxiom) {
-                        OWLSubPropertyChainOfAxiom spc = (OWLSubPropertyChainOfAxiom) ax;
-                        if (spc.getSuperProperty().isNamed()) {
-                            String p = getPropertyId(spc.getSuperProperty());
-                            List<String> cpids = spc.getPropertyChain().stream()
-                                    .map(cp -> cp.isAnonymous() ? null : getPropertyId(cp))
-                                    .collect(Collectors.toList());
-                            if (cpids.stream().noneMatch(Objects::isNull)) {
-                                oboGraphBuilder.addPropertyChainAxiom(new PropertyChainAxiom.Builder().predicateId(p).chainPredicateIds(cpids).build());
-                            }
-                        }
-                    } else if (ax instanceof OWLObjectPropertyRangeAxiom) {
-                        OWLObjectPropertyRangeAxiom rax = (OWLObjectPropertyRangeAxiom) ax;
-                        OWLClassExpression rc = rax.getRange();
-                        if (rc.isNamed()) {
-                            String propertyId = getPropertyId(rax.getProperty());
-                            oboGraphBuilder.addPropertyRangeClassId(propertyId, getClassId(rc.asOWLClass()));
-                        }
-                    } else if (ax instanceof OWLObjectPropertyDomainAxiom) {
-                        OWLObjectPropertyDomainAxiom rax = (OWLObjectPropertyDomainAxiom) ax;
-                        OWLClassExpression rc = rax.getDomain();
-                        if (rc.isNamed()) {
-                            String propertyId = getPropertyId(rax.getProperty());
-                            oboGraphBuilder.addPropertyDomainClassId(propertyId, getClassId(rc.asOWLClass()));
-                        }
-                    }
-                } else {
-                    oboGraphBuilder.addUntranslatedAxiom(ax);
-                }
-            } else {
-                // NON-LOGICAL AXIOMS
-                if (ax instanceof OWLAnnotationAssertionAxiom) {
-                    OWLAnnotationAssertionAxiom aaa = (OWLAnnotationAssertionAxiom) ax;
-                    OWLAnnotationProperty p = aaa.getProperty();
-                    OWLAnnotationSubject s = aaa.getSubject();
-
-                    // non-blank nodes
-                    if (s instanceof IRI) {
-                        IRI pIRI = p.getIRI();
-                        String subj = getNodeId((IRI) s);
-
-                        OWLAnnotationValue v = aaa.getValue();
-                        String lv = null;
-                        if (v instanceof OWLLiteral) {
-                            lv = ((OWLLiteral) v).getLiteral();
-                        }
-                        if (p.isLabel() && lv != null) {
-                            oboGraphBuilder.addNodeLabel(subj, lv);
-                        } else if (isDefinitionProperty(pIRI) && lv != null) {
-                            DefinitionPropertyValue def = new DefinitionPropertyValue.Builder()
-                                    .val(lv)
-                                    .xrefs(meta.getXrefsValues())
-                                    .meta(buildBasicPropertyValueMeta(meta))
-                                    .build();
-                            oboGraphBuilder.addNodeDefinitionPropertyValue(subj, def);
-                        } else if (isHasXrefProperty(pIRI) && lv != null) {
-                            XrefPropertyValue xref = new XrefPropertyValue.Builder()
-                                    .val(lv)
-                                    .meta(buildBasicPropertyValueMeta(meta))
-                                    .build();
-                            oboGraphBuilder.addNodeXrefPropertyValue(subj, xref);
-                        } else if (p.isDeprecated() && aaa.isDeprecatedIRIAssertion()) {
-                            oboGraphBuilder.setNodeDeprecated(subj, true);
-                        } else if (p.isComment() && lv != null) {
-                            oboGraphBuilder.addNodeComment(subj, lv);
-                        } else if (isOboInOwlIdProperty(pIRI)) {
-                            // skip
-                        } else if (isInSubsetProperty(pIRI)) {
-                            oboGraphBuilder.addNodeSubset(subj, v.toString());
-                        } else if (synonymVocabulary.contains(pIRI.toString()) && lv != null) {
-                            SCOPES scope = synonymVocabulary.get(pIRI.toString());
-                            String synonymType = "";
-                            for (OWLAnnotation a : aaa.getAnnotations()) {
-                                if (a.getProperty().getIRI().toString().equals(SynonymVocabulary.SYNONYM_TYPE)) {
-                                    synonymType = a.getValue().toString();
-                                } else {
-                                    // TODO: capture these in meta
-                                }
-                            }
-
-                            SynonymPropertyValue syn = new SynonymPropertyValue.Builder()
-                                    .pred(scope.pred())
-                                    .synonymType(synonymType)
-                                    .val(lv)
-                                    .xrefs(meta.getXrefsValues())
-                                    .meta(buildBasicPropertyValueMeta(meta))
-                                    .build();
-                            oboGraphBuilder.addNodeSynonymPropertyValue(subj, syn);
-                        } else {
-                            String val;
-                            if (v instanceof IRI) {
-                                val = ((IRI) v).toString();
-                            } else if (v instanceof OWLLiteral) {
-                                val = ((OWLLiteral) v).getLiteral();
-                            } else if (v instanceof OWLAnonymousIndividual) {
-                                val = ((OWLAnonymousIndividual) v).getID().toString();
-                            } else {
-                                val = "";
-                            }
-
-                            BasicPropertyValue basicPropertyValue = new BasicPropertyValue.Builder()
-                                    .pred(getPropertyId(p))
-                                    .val(val)
-                                    .meta(buildBasicPropertyValueMeta(meta))
-                                    .build();
-
-                            oboGraphBuilder.addNodeBasicPropertyValue(subj, basicPropertyValue);
-                        }
-
-                    } else {
-                        // subject is anonymous
-                        oboGraphBuilder.addUntranslatedAxiom(aaa);
-                    }
-                }
+            switch (ax) {
+                case OWLDeclarationAxiom dax -> convertOWLDeclarationAxiom(dax, oboGraphBuilder);
+                case OWLLogicalAxiom owlLogicalAxiom -> convertOWLLogicalAxiom(owlLogicalAxiom, oboGraphBuilder, meta);
+                case OWLAnnotationAssertionAxiom aaa -> convertOWLAnnotationAssertionAxiom(aaa, oboGraphBuilder, meta);
+                default -> oboGraphBuilder.addUntranslatedAxiom(ax);
             }
         }
 
@@ -402,6 +101,283 @@ public class FromOwl {
         return oboGraphBuilder.buildGraph();
     }
 
+    private void convertOWLDeclarationAxiom(OWLDeclarationAxiom dax, OboGraphBuilder oboGraphBuilder) {
+        OWLEntity e = dax.getEntity();
+        String id = e.getIRI().toString();
+        switch (e) {
+            case OWLClass ignored -> oboGraphBuilder.addNodeType(id, RdfType.CLASS);
+            case OWLNamedIndividual ignored -> oboGraphBuilder.addNodeType(id, RdfType.INDIVIDUAL);
+            case OWLDataProperty ignored -> oboGraphBuilder.addNodeType(id, PropertyType.DATA);
+            case OWLObjectProperty ignored -> oboGraphBuilder.addNodeType(id, PropertyType.OBJECT);
+            case OWLAnnotationProperty ignored -> oboGraphBuilder.addNodeType(id, PropertyType.ANNOTATION);
+            default -> {
+                // ignore
+            }
+        }
+    }
+
+    // LOGICAL AXIOMS
+    private void convertOWLLogicalAxiom(OWLLogicalAxiom owlLogicalAxiom, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        switch (owlLogicalAxiom) {
+            case OWLSubClassOfAxiom sca -> convertOWLSubClassOfAxiom(sca, oboGraphBuilder, meta);
+            case OWLClassAssertionAxiom ca -> convertOWLClassAssertionAxiom(ca, oboGraphBuilder, meta);
+            case OWLObjectPropertyAssertionAxiom opa -> convertOWLObjectPropertyAssertionAxiom(opa, oboGraphBuilder, meta);
+            case OWLEquivalentClassesAxiom eca -> convertOWLEquivalentClassesAxiom(eca, meta, oboGraphBuilder);
+            case OWLObjectPropertyAxiom objectPropertyAxiom -> convertOWLObjectPropertyAxiom(objectPropertyAxiom, oboGraphBuilder, meta);
+            default -> oboGraphBuilder.addUntranslatedAxiom(owlLogicalAxiom);
+        }
+    }
+
+    private void convertOWLSubClassOfAxiom(OWLSubClassOfAxiom sca, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        OWLClassExpression subc = sca.getSubClass();
+
+        if (subc.isAnonymous()) {
+            // GCI
+            /*
+             * TBD: Model for GCIs. See https://github.com/obophenotype/uberon/wiki/Evolutionary-variability-GCIs
+            if (subc instanceof OWLObjectIntersectionOf) {
+                OBOClassDef cdef = getClassDef(((OWLObjectIntersectionOf)subc).getOperands());
+                if (cdef.genusClassIds.size() == 1) {
+                    subj = cdef.genusClassIds.get(0);
+                }
+
+                if (subc instanceof OWLObjectSomeValuesFrom) {
+                    // Some axioms such as phylogenetic GCIs are encoded this way
+                    ExistentialRestrictionExpression r = getRestriction(subc);
+                    subj = r.getFillerId();
+                }
+            }
+             */
+        } else if (subc.isNamed()) {
+            // SUBJECT IS NAMED CLASS (non-GCI)
+            convertNamedSubClassOfAxiom(sca, oboGraphBuilder, meta);
+        } else {
+            // Logically impossible to reach this? subj is either named or anonymous
+            oboGraphBuilder.addUntranslatedAxiom(sca);
+        }
+    }
+
+    private void convertNamedSubClassOfAxiom(OWLSubClassOfAxiom sca, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        String subj = getClassId((OWLClass) sca.getSubClass());
+        oboGraphBuilder.addNodeType(subj, RdfType.CLASS);
+
+        OWLClassExpression supc = sca.getSuperClass();
+        if (supc.isAnonymous()) {
+            if (supc instanceof OWLObjectSomeValuesFrom) {
+                ExistentialRestrictionExpression r = getRestriction(supc);
+                if (r == null) {
+                    oboGraphBuilder.addUntranslatedAxiom(sca);
+                } else {
+                    oboGraphBuilder.addEdge(subj, r.propertyId(), r.fillerId(), meta);
+                }
+            } else if (supc instanceof OWLObjectAllValuesFrom avf) {
+                convertObjectAllValuesFrom(sca, oboGraphBuilder, meta, avf, subj);
+            }
+        } else {
+            oboGraphBuilder.addEdge(subj, SUBCLASS_OF, getClassId((OWLClass) supc), meta);
+        }
+    }
+
+    private void convertObjectAllValuesFrom(OWLSubClassOfAxiom sca, OboGraphBuilder oboGraphBuilder, Meta meta, OWLObjectAllValuesFrom avf, String subj) {
+        OWLObjectPropertyExpression property = avf.getProperty();
+        switch (property) {
+            case OWLObjectProperty owlObjectProperty when avf.getFiller().isNamed() -> {
+                String propertyId = getPropertyId(property);
+                DomainRangeAxiom domainRangeAxiom = oboGraphBuilder.getDomainRangeAxiomBuilder(propertyId).build();
+                Edge edge = buildEdge(subj,
+                        //TODO CHECK!!!
+                        domainRangeAxiom.predicateId(),
+                        getClassId(avf.getFiller().asOWLClass()),
+                        meta);
+                oboGraphBuilder.addPropertyEdgeDefinitions(propertyId, edge);
+            }
+            case OWLObjectInverseOf iop when avf.getFiller().isNamed() && iop.isNamed() -> {
+                String pid = getPropertyId(iop.getInverse());
+                Edge edge = buildEdge(subj, INVERSE_OF, pid, meta);
+                oboGraphBuilder.addPropertyEdgeDefinitions(pid, edge);
+            }
+            default -> oboGraphBuilder.addUntranslatedAxiom(sca);
+        }
+    }
+
+    private void convertOWLClassAssertionAxiom(OWLClassAssertionAxiom ca, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        OWLClassExpression cx = ca.getClassExpression();
+        if (cx.isAnonymous()) {
+            oboGraphBuilder.addUntranslatedAxiom(ca);
+        } else {
+            String subj = getIndividualId(ca.getIndividual());
+            String obj = getClassId(cx.asOWLClass());
+            oboGraphBuilder.addEdge(subj, TYPE, obj, meta);
+            oboGraphBuilder.addNodeId(subj); // always include
+            oboGraphBuilder.addNodeId(obj); // always include
+        }
+    }
+
+    private void convertOWLObjectPropertyAssertionAxiom(OWLObjectPropertyAssertionAxiom opa, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        String subj = getIndividualId(opa.getSubject());
+        String obj = getIndividualId(opa.getObject());
+        if (opa.getProperty().isAnonymous()) {
+            oboGraphBuilder.addUntranslatedAxiom(opa);
+        } else {
+            String pred = getPropertyId(opa.getProperty());
+            oboGraphBuilder.addEdge(subj, pred, obj, meta);
+        }
+        // always include subject node of an OPA
+        oboGraphBuilder.addNodeId(subj);
+    }
+
+    private void convertOWLEquivalentClassesAxiom(OWLEquivalentClassesAxiom eca, Meta meta, OboGraphBuilder oboGraphBuilder) {
+        List<OWLClassExpression> xs = eca.getClassExpressionsAsList();
+        List<OWLClassExpression> anonXs = xs.stream()
+                .filter(IsAnonymous::isAnonymous)
+                .toList();
+        List<OWLClassExpression> namedXs = xs.stream()
+                .filter(IsAnonymous::isNamed)
+                .toList();
+        if (anonXs.isEmpty()) {
+            Set<String> xClassIds = namedXs.stream()
+                    .map(x -> getClassId((OWLClass) x))
+                    .collect(Collectors.toCollection(LinkedHashSet::new));
+            // EquivalentNodesSet
+            // all classes in equivalence axiom are named
+            // TODO: merge pairwise assertions into a clique
+            //TODO: EquivalentNodesSet.representativeNodeId() is not set in the production code!!
+            EquivalentNodesSet enset = new EquivalentNodesSet.Builder().nodeIds(xClassIds).meta(nullIfEmpty(meta)).build();
+            oboGraphBuilder.addEquivalentNodesSet(enset);
+        } else {
+            // possibilities are:
+            //  - LogicalDefinitionAxiom
+            //  - TBD
+            if (anonXs.size() == 1 && namedXs.size() == 1) {
+                OWLClassExpression anonX = anonXs.get(0);
+                if (anonX instanceof OWLObjectIntersectionOf owlObjectIntersectionOf) {
+                    Set<OWLClassExpression> ixs = owlObjectIntersectionOf.getOperands();
+                    OBOClassDef classDef = getClassDef(ixs);
+                    if (classDef != null && !classDef.restrs.contains(null)) {
+                        LogicalDefinitionAxiom lda = new LogicalDefinitionAxiom.Builder()
+                                .definedClassId(getClassId((OWLClass) namedXs.get(0)))
+                                .genusIds(classDef.genusClassIds)
+                                .restrictions(classDef.restrs)
+                                .build();
+                        oboGraphBuilder.addLogicalDefinitionAxiom(lda);
+                    } else {
+                        oboGraphBuilder.addUntranslatedAxiom(eca);
+                    }
+                }
+            }
+        }
+    }
+
+    private void convertOWLObjectPropertyAxiom(OWLObjectPropertyAxiom owlObjectPropertyAxiom, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        switch (owlObjectPropertyAxiom) {
+            case OWLSubObjectPropertyOfAxiom spa when spa.getSubProperty().isNamed() && spa.getSuperProperty().isNamed() -> {
+                String subj = getPropertyId(spa.getSubProperty());
+                String obj = getPropertyId(spa.getSuperProperty());
+                oboGraphBuilder.addEdge(subj, SUBPROPERTY_OF, obj, meta);
+            }
+            case OWLInverseObjectPropertiesAxiom ipa when ipa.getFirstProperty().isNamed() && ipa.getSecondProperty().isNamed() -> {
+                String p1 = getPropertyId(ipa.getFirstProperty());
+                String p2 = getPropertyId(ipa.getSecondProperty());
+                oboGraphBuilder.addEdge(p1, INVERSE_OF, p2, meta);
+            }
+            case OWLSubPropertyChainOfAxiom spc when spc.getSuperProperty().isNamed() -> {
+                String p = getPropertyId(spc.getSuperProperty());
+                List<String> cpids = spc.getPropertyChain().stream()
+                        .map(cp -> cp.isAnonymous() ? null : getPropertyId(cp))
+                        .toList();
+                if (cpids.stream().noneMatch(Objects::isNull)) {
+                    oboGraphBuilder.addPropertyChainAxiom(new PropertyChainAxiom.Builder().predicateId(p).chainPredicateIds(cpids).build());
+                }
+            }
+            case OWLObjectPropertyRangeAxiom propertyRangeAxiom when propertyRangeAxiom.getRange().isNamed() -> {
+                OWLClassExpression rc = propertyRangeAxiom.getRange();
+                String propertyId = getPropertyId(propertyRangeAxiom.getProperty());
+                oboGraphBuilder.addPropertyRangeClassId(propertyId, getClassId(rc.asOWLClass()));
+            }
+            case OWLObjectPropertyDomainAxiom propertyDomainAxiom when propertyDomainAxiom.getDomain().isNamed() -> {
+                OWLClassExpression rc = propertyDomainAxiom.getDomain();
+                String propertyId = getPropertyId(propertyDomainAxiom.getProperty());
+                oboGraphBuilder.addPropertyDomainClassId(propertyId, getClassId(rc.asOWLClass()));
+            }
+            case null, default -> {
+                // do nothing
+            }
+        }
+    }
+
+    private void convertOWLAnnotationAssertionAxiom(OWLAnnotationAssertionAxiom aaa, OboGraphBuilder oboGraphBuilder, Meta meta) {
+        // NON-LOGICAL AXIOMS
+        OWLAnnotationProperty p = aaa.getProperty();
+        OWLAnnotationSubject s = aaa.getSubject();
+
+        // non-blank nodes
+        if (s instanceof IRI sIri) {
+            IRI pIRI = p.getIRI();
+            String subj = getNodeId(sIri);
+
+            OWLAnnotationValue v = aaa.getValue();
+            String lv = (v instanceof OWLLiteral literal) ? literal.getLiteral() : null;
+            if (p.isDeprecated() && aaa.isDeprecatedIRIAssertion()) {
+                oboGraphBuilder.setNodeDeprecated(subj, true);
+            } else if (isOboInOwlIdProperty(pIRI)) {
+                // skip
+            } else if (isInSubsetProperty(pIRI)) {
+                oboGraphBuilder.addNodeSubset(subj, v.toString());
+            } else if (p.isLabel() && lv != null) {
+                oboGraphBuilder.addNodeLabel(subj, lv);
+            } else if (isDefinitionProperty(pIRI) && lv != null) {
+                DefinitionPropertyValue def = new DefinitionPropertyValue.Builder()
+                        .val(lv)
+                        .xrefs(meta.xrefsValues())
+                        .meta(buildBasicPropertyValueMeta(meta))
+                        .build();
+                oboGraphBuilder.addNodeDefinitionPropertyValue(subj, def);
+            } else if (isHasXrefProperty(pIRI) && lv != null) {
+                XrefPropertyValue xref = new XrefPropertyValue.Builder()
+                        .val(lv)
+                        .meta(buildBasicPropertyValueMeta(meta))
+                        .build();
+                oboGraphBuilder.addNodeXrefPropertyValue(subj, xref);
+            } else if (p.isComment() && lv != null) {
+                oboGraphBuilder.addNodeComment(subj, lv);
+            } else if (SynonymVocabulary.containsIri(pIRI.toString()) && lv != null) {
+                Scope scope = SynonymVocabulary.getScope(pIRI.toString());
+                String synonymType = "";
+                for (OWLAnnotation a : aaa.getAnnotations()) {
+                    if (a.getProperty().getIRI().toString().equals(SynonymVocabulary.SYNONYM_TYPE)) {
+                        synonymType = a.getValue().toString();
+                    } else {
+                        // TODO: capture these in meta
+                    }
+                }
+                SynonymPropertyValue syn = new SynonymPropertyValue.Builder()
+                        .pred(scope.pred())
+                        .synonymType(synonymType)
+                        .val(lv)
+                        .xrefs(meta.xrefsValues())
+                        .meta(buildBasicPropertyValueMeta(meta))
+                        .build();
+                oboGraphBuilder.addNodeSynonymPropertyValue(subj, syn);
+            } else {
+                String val = switch (v) {
+                    case IRI iri -> iri.toString();
+                    case OWLLiteral owlLiteral -> owlLiteral.getLiteral();
+                    case OWLAnonymousIndividual owlAnonymousIndividual -> owlAnonymousIndividual.getID().toString();
+                    default -> "";
+                };
+                BasicPropertyValue basicPropertyValue = new BasicPropertyValue.Builder()
+                        .pred(getPropertyId(p))
+                        .val(val)
+                        .meta(buildBasicPropertyValueMeta(meta))
+                        .build();
+                oboGraphBuilder.addNodeBasicPropertyValue(subj, basicPropertyValue);
+            }
+        } else {
+            // subject is anonymous
+            oboGraphBuilder.addUntranslatedAxiom(aaa);
+        }
+    }
+
     static class OboGraphBuilder {
 
         private final String graphId;
@@ -411,7 +387,7 @@ public class FromOwl {
         private final List<EquivalentNodesSet> ensets = new ArrayList<>();
         private final List<LogicalDefinitionAxiom> ldas = new ArrayList<>();
         private final Set<String> nodeIds = new LinkedHashSet<>();
-        private final Map<String, RDFTYPES> nodeTypeMap = new LinkedHashMap<>();
+        private final Map<String, RdfType> nodeTypeMap = new LinkedHashMap<>();
         private final Map<String, String> nodeLabelMap = new LinkedHashMap<>();
         private final Map<String, DomainRangeAxiom.Builder> domainRangeBuilderMap = new LinkedHashMap<>();
         private final List<PropertyChainAxiom> pcas = new ArrayList<>();
@@ -436,15 +412,15 @@ public class FromOwl {
             nodeIds.add(nodeId);
         }
 
-        public void addNodeType(String nodeId, RDFTYPES rdftypes) {
+        public void addNodeType(String nodeId, RdfType rdfType) {
             // ensure all nodes are added, even if they lack a label
             nodeIds.add(nodeId);
-            nodeTypeMap.put(nodeId, rdftypes);
+            nodeTypeMap.put(nodeId, rdfType);
         }
 
         public void addNodeType(String nodeId, PropertyType propertyType) {
             nodeIds.add(nodeId);
-            nodeTypeMap.put(nodeId, RDFTYPES.PROPERTY);
+            nodeTypeMap.put(nodeId, RdfType.PROPERTY);
             nodePropertyTypeMap.put(nodeId, propertyType);
         }
 
@@ -485,13 +461,13 @@ public class FromOwl {
         public void setNodeDeprecated(String nodeId, boolean isDeprecated) {
             Meta.Builder nb = getMetaBuilderForId(nodeId);
             nb.deprecated(isDeprecated);
-            nodeIds.add(nodeId); // TODO: CHECK!! NEW ADDITION in 0.3.1
+            nodeIds.add(nodeId);
         }
 
         public void addNodeComment(String nodeId, String comment) {
             Meta.Builder nb = getMetaBuilderForId(nodeId);
             nb.addComment(comment);
-            nodeIds.add(nodeId); // TODO: CHECK!! NEW ADDITION in 0.3.1
+            nodeIds.add(nodeId);
         }
 
         public void addNodeSubset(String nodeId, String subset) {
@@ -559,7 +535,7 @@ public class FromOwl {
         public Graph buildGraph() {
             List<Node> nodes = new ArrayList<>();
             for (String n : nodeIds) {
-                Builder nb = new Node.Builder()
+                var nb = new Node.Builder()
                         .id(n)
                         .label(nodeLabelMap.getOrDefault(n, ""));
                 if (nodeMetaBuilderMap.containsKey(n)) {
@@ -567,9 +543,9 @@ public class FromOwl {
                     nb.meta(nullIfEmpty(nodeMeta));
                 }
                 if (nodeTypeMap.containsKey(n)) {
-                    RDFTYPES type = nodeTypeMap.get(n);
-                    nb.type(type);
-                    if (type == RDFTYPES.PROPERTY) {
+                    RdfType type = nodeTypeMap.get(n);
+                    nb.rdfType(type);
+                    if (type == RdfType.PROPERTY) {
                         // Change for https://github.com/geneontology/obographs/issues/65
                         PropertyType propertyType = nodePropertyTypeMap.get(n);
                         nb.propertyType(propertyType);
@@ -581,7 +557,7 @@ public class FromOwl {
             List<DomainRangeAxiom> domainRangeAxioms = domainRangeBuilderMap.values()
                     .stream()
                     .map(DomainRangeAxiom.Builder::build)
-                    .collect(Collectors.toList());
+                    .toList();
 
             return new Graph.Builder()
                     .id(graphId)
@@ -594,7 +570,6 @@ public class FromOwl {
                     .propertyChainAxioms(pcas)
                     .build();
         }
-
     }
 
 
@@ -617,11 +592,13 @@ public class FromOwl {
         for (OWLAnnotation ann : anns) {
             OWLAnnotationProperty p = ann.getProperty();
             OWLAnnotationValue v = ann.getValue();
-            String val = v instanceof IRI ? ((IRI) v).toString() : ((OWLLiteral) v).getLiteral();
+            String val = v instanceof IRI iri ? iri.toString() : ((OWLLiteral) v).getLiteral();
             if (ann.isDeprecatedIRIAnnotation()) {
                 builder.deprecated(true);
             } else if (isHasXrefProperty(p.getIRI())) {
                 builder.addXref(new XrefPropertyValue.Builder().val(val).build());
+            } else if (isExactMatchProperty(p.getIRI())) {
+                builder.addXref(new XrefPropertyValue.Builder().val(val).pred("exactMatch").build());
             } else if (isInSubsetProperty(p.getIRI())) {
                 builder.addSubset(val);
             } else if (isHasSynonymTypeProperty(p.getIRI())) {
@@ -640,7 +617,7 @@ public class FromOwl {
     }
 
     private Meta buildBasicPropertyValueMeta(Meta existingMeta) {
-        List<BasicPropertyValue> basicPropertyValues = existingMeta.getBasicPropertyValues();
+        List<BasicPropertyValue> basicPropertyValues = existingMeta.basicPropertyValues();
         return basicPropertyValues.isEmpty() ? null : new Meta.Builder()
                 .addAllBasicPropertyValues(basicPropertyValues)
                 .build();
@@ -665,13 +642,12 @@ public class FromOwl {
 
     @Nullable
     private ExistentialRestrictionExpression getRestriction(OWLClassExpression x) {
-        if (x instanceof OWLObjectSomeValuesFrom) {
-            OWLObjectSomeValuesFrom r = (OWLObjectSomeValuesFrom) x;
+        if (x instanceof OWLObjectSomeValuesFrom r) {
             OWLPropertyExpression p = r.getProperty();
             OWLClassExpression f = r.getFiller();
-            if (p instanceof OWLObjectProperty && !f.isAnonymous()) {
+            if (p instanceof OWLObjectProperty owlObjectProperty && !f.isAnonymous()) {
                 return new ExistentialRestrictionExpression.Builder()
-                        .propertyId(getPropertyId((OWLObjectProperty) p))
+                        .propertyId(getPropertyId(owlObjectProperty))
                         .fillerId(getClassId((OWLClass) f))
                         .build();
             }
@@ -748,6 +724,14 @@ public class FromOwl {
 
     public boolean isHasXrefProperty(IRI iri) {
         return iri.toString().equals("http://www.geneontology.org/formats/oboInOwl#hasDbXref");
+    }
+
+    public boolean isExactMatchProperty(IRI iri) {
+        return iri.toString().equals("http://www.w3.org/2004/02/skos/core#exactMatch");
+    }
+
+    public boolean isRelatedMatchProperty(IRI iri) {
+        return iri.toString().equals("http://www.w3.org/2004/02/skos/core#relatedMatch");
     }
 
     public boolean isInSubsetProperty(IRI iri) {
