@@ -1,23 +1,21 @@
 package org.geneontology.obographs.owlapi;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import org.apache.commons.io.FileUtils;
 import org.geneontology.obographs.core.io.OgJsonGenerator;
 import org.geneontology.obographs.core.io.OgJsonReader;
 import org.geneontology.obographs.core.io.OgYamlGenerator;
 import org.geneontology.obographs.core.io.OgYamlReader;
 import org.geneontology.obographs.core.model.*;
-import org.geneontology.obographs.core.model.AbstractNode.PropertyType;
+import org.geneontology.obographs.core.model.PropertyType;
 import org.geneontology.obographs.core.model.meta.BasicPropertyValue;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.semanticweb.owlapi.apibinding.OWLManager;
-import org.semanticweb.owlapi.model.IRI;
 import org.semanticweb.owlapi.model.OWLOntology;
 import org.semanticweb.owlapi.model.OWLOntologyCreationException;
 import org.semanticweb.owlapi.model.OWLOntologyManager;
 
 import java.io.*;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -26,7 +24,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
-import static org.geneontology.obographs.core.model.AbstractNode.RDFTYPES.*;
+import static org.geneontology.obographs.core.model.RdfType.*;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -47,7 +45,9 @@ public class FromOwlTest {
      * to be run again otherwise the tests will (should!) fail.
      * @throws Exception
      */
-    public void createExampleFiles() throws Exception {
+    @Test
+    @Disabled("Only to be run manually when examples directory needs updating due to change in expected obograph file output")
+    void createExampleFiles() throws Exception {
         System.out.println("Creating example files in examples/ directory");
         for (File file : getTestOboOwlFiles()) {
             System.out.println("Loading " + file.getPath());
@@ -87,7 +87,7 @@ public class FromOwlTest {
             GraphDocument testGraphDocument = new FromOwl().generateGraphDocument(ontology);
             String strippedFileName = stripOboOwlExtensionFromFileName(file);
 
-            List<String> formats = Arrays.asList(".json", ".yaml");
+            List<String> formats = List.of(".json", ".yaml");
             for (String format : formats) {
                 System.out.println("Checking " + strippedFileName + format);
                 Path exampleFile = examplesPath.resolve(strippedFileName + format);
@@ -102,13 +102,11 @@ public class FromOwlTest {
     }
 
     private GraphDocument readGraphDocumentFrom(Path newFilePath, String format) throws IOException {
-        switch (format) {
-            case ".json":
-                return OgJsonReader.readFile(newFilePath.toFile());
-            case ".yaml":
-                return OgYamlReader.readFile(newFilePath.toFile());
-        }
-        throw new IllegalArgumentException("Format '" + format + "' not recognised");
+        return switch (format) {
+            case ".json" -> OgJsonReader.readFile(newFilePath.toFile());
+            case ".yaml" -> OgYamlReader.readFile(newFilePath.toFile());
+            default -> throw new IllegalArgumentException("Format '" + format + "' not recognised");
+        };
     }
 
     private Path writeNewTempFileWithFormat(GraphDocument gd, String strippedFileName, String format) throws IOException {
@@ -139,10 +137,10 @@ public class FromOwlTest {
             int line = 1;
             while (line1 != null && line2 != null) {
                 if (!line1.equals(line2)) {
-                    System.out.println("Mismatch at line: " + line);
+                    System.out.println("Mismatch at " + newFile + " line " + line + " when comparing to " + originalFile);
                     System.out.println("Exp: " + line1);
                     System.out.println("Got: " + line2);
-                    fail("Mismatch at " + newFile + " line " + line);
+                    fail("Mismatch at " + newFile + " line " + line + " when comparing to " + originalFile);
                 }
                 line++;
                 line1 = br1.readLine();
@@ -171,46 +169,48 @@ public class FromOwlTest {
 
     @Test
     public void testMissingNestedRestrictions() throws Exception {
-        String axiom = "<?xml version=\"1.0\"?>\n" +
-                "<rdf:RDF xmlns=\"http://purl.obolibrary.org/obo/uberon.owl#\"\n" +
-                "     xml:base=\"http://purl.obolibrary.org/obo/uberon.owl\"\n" +
-                "     xmlns:obo=\"http://purl.obolibrary.org/obo/\"\n" +
-                "     xmlns:oboInOwl=\"http://www.geneontology.org/formats/oboInOwl#\"\n" +
-                "     xmlns:owl=\"http://www.w3.org/2002/07/owl#\"\n" +
-                "     xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n" +
-                "    <owl:Ontology rdf:about=\"http://purl.obolibrary.org/obo/uberon.owl\">\n" +
-                "        <owl:versionIRI rdf:resource=\"http://purl.obolibrary.org/obo/uberon/releases/2022-12-13/uberon.owl\"/>\n" +
-                "    </owl:Ontology>\n" +
-                "    \n<owl:Axiom>\n" +
-                "        <owl:annotatedSource rdf:resource=\"http://purl.obolibrary.org/obo/UBERON_0009551\"/>\n" +
-                "        <owl:annotatedProperty rdf:resource=\"http://www.w3.org/2002/07/owl#equivalentClass\"/>\n" +
-                "        <owl:annotatedTarget>\n" +
-                "            <owl:Class>\n" +
-                "                <owl:intersectionOf rdf:parseType=\"Collection\">\n" +
-                "                    <rdf:Description rdf:about=\"http://purl.obolibrary.org/obo/UBERON_0002529\"/>\n" +
-                "                    <owl:Restriction>\n" +
-                "                        <owl:onProperty rdf:resource=\"http://purl.obolibrary.org/obo/BFO_0000050\"/>\n" +
-                "                        <owl:someValuesFrom rdf:resource=\"http://purl.obolibrary.org/obo/UBERON_0002544\"/>\n" +
-                "                    </owl:Restriction>\n" +
-                "                    <owl:Restriction>\n" +
-                "                        <owl:onProperty rdf:resource=\"http://purl.obolibrary.org/obo/BFO_0000051\"/>\n" +
-                "                        <owl:someValuesFrom rdf:resource=\"http://purl.obolibrary.org/obo/UBERON_0004300\"/>\n" +
-                "                    </owl:Restriction>\n" +
-                "                    <owl:Restriction>\n" +
-                "                        <owl:onProperty rdf:resource=\"http://purl.obolibrary.org/obo/BFO_0000051\"/>\n" +
-                "                        <owl:someValuesFrom>\n" +
-                "                            <owl:Restriction>\n" +
-                "                                <owl:onProperty rdf:resource=\"http://purl.obolibrary.org/obo/BFO_0000050\"/>\n" +
-                "                                <owl:someValuesFrom rdf:resource=\"http://purl.obolibrary.org/obo/UBERON_0009768\"/>\n" +
-                "                            </owl:Restriction>\n" +
-                "                        </owl:someValuesFrom>\n" +
-                "                    </owl:Restriction>\n" +
-                "                </owl:intersectionOf>\n" +
-                "            </owl:Class>\n" +
-                "        </owl:annotatedTarget>\n" +
-                "        <oboInOwl:source>cjm</oboInOwl:source>\n" +
-                "    </owl:Axiom>\n" +
-                "</rdf:RDF>";
+        String axiom = """
+                <?xml version="1.0"?>
+                <rdf:RDF xmlns="http://purl.obolibrary.org/obo/uberon.owl#"
+                     xml:base="http://purl.obolibrary.org/obo/uberon.owl"
+                     xmlns:obo="http://purl.obolibrary.org/obo/"
+                     xmlns:oboInOwl="http://www.geneontology.org/formats/oboInOwl#"
+                     xmlns:owl="http://www.w3.org/2002/07/owl#"
+                     xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+                    <owl:Ontology rdf:about="http://purl.obolibrary.org/obo/uberon.owl">
+                        <owl:versionIRI rdf:resource="http://purl.obolibrary.org/obo/uberon/releases/2022-12-13/uberon.owl"/>
+                    </owl:Ontology>
+                    <owl:Axiom>
+                        <owl:annotatedSource rdf:resource="http://purl.obolibrary.org/obo/UBERON_0009551"/>
+                        <owl:annotatedProperty rdf:resource="http://www.w3.org/2002/07/owl#equivalentClass"/>
+                        <owl:annotatedTarget>
+                            <owl:Class>
+                                <owl:intersectionOf rdf:parseType="Collection">
+                                    <rdf:Description rdf:about="http://purl.obolibrary.org/obo/UBERON_0002529"/>
+                                    <owl:Restriction>
+                                        <owl:onProperty rdf:resource="http://purl.obolibrary.org/obo/BFO_0000050"/>
+                                        <owl:someValuesFrom rdf:resource="http://purl.obolibrary.org/obo/UBERON_0002544"/>
+                                    </owl:Restriction>
+                                    <owl:Restriction>
+                                        <owl:onProperty rdf:resource="http://purl.obolibrary.org/obo/BFO_0000051"/>
+                                        <owl:someValuesFrom rdf:resource="http://purl.obolibrary.org/obo/UBERON_0004300"/>
+                                    </owl:Restriction>
+                                    <owl:Restriction>
+                                        <owl:onProperty rdf:resource="http://purl.obolibrary.org/obo/BFO_0000051"/>
+                                        <owl:someValuesFrom>
+                                            <owl:Restriction>
+                                                <owl:onProperty rdf:resource="http://purl.obolibrary.org/obo/BFO_0000050"/>
+                                                <owl:someValuesFrom rdf:resource="http://purl.obolibrary.org/obo/UBERON_0009768"/>
+                                            </owl:Restriction>
+                                        </owl:someValuesFrom>
+                                    </owl:Restriction>
+                                </owl:intersectionOf>
+                            </owl:Class>
+                        </owl:annotatedTarget>
+                        <oboInOwl:source>cjm</oboInOwl:source>
+                    </owl:Axiom>
+                </rdf:RDF>
+                """;
         GraphDocument graphDocument = generateGraphDocument(axiom);
         System.out.println(OgYamlGenerator.render(graphDocument));
     }
@@ -220,23 +220,25 @@ public class FromOwlTest {
      */
     @Test
     public void testClassDeclarationsWithoutFurtherAssertionsShouldBeIncludedInOboGraph() throws Exception {
-        String owlFile = "Prefix(:=<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544#>)\n" +
-                         "Prefix(owl:=<http://www.w3.org/2002/07/owl#>)\n" +
-                         "Prefix(rdf:=<http://www.w3.org/1999/02/22-rdf-syntax-ns#>)\n" +
-                         "Prefix(xml:=<http://www.w3.org/XML/1998/namespace>)\n" +
-                         "Prefix(xsd:=<http://www.w3.org/2001/XMLSchema#>)\n" +
-                         "Prefix(rdfs:=<http://www.w3.org/2000/01/rdf-schema#>)\n" +
-                         "\n" +
-                         "\n" +
-                         "Ontology(<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544>\n" +
-                         "\n" +
-                         "Declaration(Class(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060>))\n" +
-                         ")";
+        String owlFile = """
+                         Prefix(:=<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544#>)
+                         Prefix(owl:=<http://www.w3.org/2002/07/owl#>)
+                         Prefix(rdf:=<http://www.w3.org/1999/02/22-rdf-syntax-ns#>)
+                         Prefix(xml:=<http://www.w3.org/XML/1998/namespace>)
+                         Prefix(xsd:=<http://www.w3.org/2001/XMLSchema#>)
+                         Prefix(rdfs:=<http://www.w3.org/2000/01/rdf-schema#>)
+                         
+                         
+                         Ontology(<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544>
+                         
+                         Declaration(Class(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060>))
+                         )
+                         """;
 
         GraphDocument actual = generateGraphDocument(owlFile);
 
         Graph.Builder graphBuilder = new Graph.Builder().id("http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544")
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060").type(CLASS).build());
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060").rdfType(CLASS).build());
         assertThat(actual, equalTo(new GraphDocument.Builder().addGraph(graphBuilder.build()).build()));
     }
 
@@ -245,36 +247,37 @@ public class FromOwlTest {
      */
     @Test
     public void testComplexPropertyExpressionLogsWarning() throws Exception {
-        var rdf = "<?xml version=\"1.0\"?>\n" +
-                  "<rdf:RDF xmlns=\"http://purl.obolibrary.org/obo/fail-expression.owl#\"\n" +
-                  "     xml:base=\"http://purl.obolibrary.org/obo/fail-expression.owl\"\n" +
-                  "     xmlns:owl=\"http://www.w3.org/2002/07/owl#\"\n" +
-                  "     xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n" +
-                  "     xmlns:xml=\"http://www.w3.org/XML/1998/namespace\"\n" +
-                  "     xmlns:xsd=\"http://www.w3.org/2001/XMLSchema#\"\n" +
-                  "     xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\">\n" +
-                  "    <owl:Ontology rdf:about=\"http://purl.obolibrary.org/obo/fail-expression.owl\">\n" +
-                  "    </owl:Ontology>\n" +
-                  "    \n" +
-                  "    <owl:Class rdf:about=\"http://purl.obolibrary.org/obo/OBI_0000260\">\n" +
-                  "        \n" +
-                  "        <rdfs:subClassOf>\n" +
-                  "            <owl:Restriction>\n" +
-                  "                <owl:onProperty>\n" +
-                  "                    <rdf:Description>\n" +
-                  "                        <owl:inverseOf rdf:resource=\"http://purl.obolibrary.org/obo/COB_0000087\"/>\n" +
-                  "                    </rdf:Description>\n" +
-                  "                </owl:onProperty>\n" +
-                  "                <owl:allValuesFrom rdf:resource=\"http://purl.obolibrary.org/obo/COB_0000082\"/>\n" +
-                  "            </owl:Restriction>\n" +
-                  "        </rdfs:subClassOf>\n" +
-                  "    </owl:Class>\n" +
-                  "   \n" +
-                  "</rdf:RDF>";
+        var rdf = """
+                  <?xml version="1.0"?>
+                  <rdf:RDF xmlns="http://purl.obolibrary.org/obo/fail-expression.owl#"
+                       xml:base="http://purl.obolibrary.org/obo/fail-expression.owl"
+                       xmlns:owl="http://www.w3.org/2002/07/owl#"
+                       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                       xmlns:xml="http://www.w3.org/XML/1998/namespace"
+                       xmlns:xsd="http://www.w3.org/2001/XMLSchema#"
+                       xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#">
+                      <owl:Ontology rdf:about="http://purl.obolibrary.org/obo/fail-expression.owl">
+                      </owl:Ontology>
+                  
+                      <owl:Class rdf:about="http://purl.obolibrary.org/obo/OBI_0000260">
+                 
+                          <rdfs:subClassOf>
+                              <owl:Restriction>
+                                  <owl:onProperty>
+                                      <rdf:Description>
+                                          <owl:inverseOf rdf:resource="http://purl.obolibrary.org/obo/COB_0000087"/>
+                                      </rdf:Description>
+                                  </owl:onProperty>
+                                  <owl:allValuesFrom rdf:resource="http://purl.obolibrary.org/obo/COB_0000082"/>
+                              </owl:Restriction>
+                          </rdfs:subClassOf>
+                      </owl:Class>
+                  </rdf:RDF>
+                  """;
 
         GraphDocument graphDocument = generateGraphDocument(rdf);
         Graph graph = new Graph.Builder().id("http://purl.obolibrary.org/obo/fail-expression.owl")
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/OBI_0000260").type(CLASS).build())
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/OBI_0000260").rdfType(CLASS).build())
                 .build();
         assertThat(graphDocument, equalTo(new GraphDocument.Builder().addGraph(graph).build()));
     }
@@ -284,25 +287,26 @@ public class FromOwlTest {
      */
     @Test
     public void testDataPropertyAssertionHandling() throws Exception {
-        String ttl = "@prefix skos: <http://www.w3.org/2004/02/skos/core#> .\n" +
-                         "@prefix owl:  <http://www.w3.org/2002/07/owl#> .\n" +
-                         "@prefix rdfs:  <http://www.w3.org/2000/01/rdf-schema#> .\n" +
-                         "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n" +
-                         "\n" +
-                         "<http://foo.com/bar> a owl:Class ;\n" +
-                         "        skos:prefLabel \"\"\"some node\"\"\"@en ;\n" +
-                         "        <http://foo.com/baz> \"\"\"test property\"\"\"^^xsd:string ;\n" +
-                         ".\n" +
-                         "\n" +
-                         "<http://foo.com/baz> a owl:DatatypeProperty ;\n" +
-                         "    rdfs:label \"\"\"test label\"\"\";\n" +
-                         "    rdfs:comment \"\"\"test comment\"\"\" .";
+        String ttl = """
+                         @prefix skos: <http://www.w3.org/2004/02/skos/core#> .
+                         @prefix owl:  <http://www.w3.org/2002/07/owl#> .
+                         @prefix rdfs:  <http://www.w3.org/2000/01/rdf-schema#> .
+                         @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
+                         
+                         <http://foo.com/bar> a owl:Class ;
+                             skos:prefLabel  "some node"@en ;
+                             <http://foo.com/baz> "test property"^^xsd:string .
+                         
+                         <http://foo.com/baz> a owl:DatatypeProperty ;
+                             rdfs:label "test label" ;
+                             rdfs:comment "test comment" .
+                         """;
 
         GraphDocument graphDocument = generateGraphDocument(ttl);
 //        System.out.println(OgYamlGenerator.render(graphDocument));
         Graph graph = new Graph.Builder()
-                .addNode(new Node.Builder().id("http://foo.com/bar").type(CLASS).meta(new Meta.Builder().addBasicPropertyValue(new BasicPropertyValue.Builder().pred("http://www.w3.org/2004/02/skos/core#prefLabel").val("some node").build()).build()).build())
-                .addNode(new Node.Builder().id("http://foo.com/baz").type(PROPERTY).propertyType(PropertyType.DATA).label("test label").meta(new Meta.Builder().addComment("test comment").build()).build())
+                .addNode(new Node.Builder().id("http://foo.com/bar").rdfType(CLASS).meta(new Meta.Builder().addBasicPropertyValue(new BasicPropertyValue.Builder().pred("http://www.w3.org/2004/02/skos/core#prefLabel").val("some node").build()).build()).build())
+                .addNode(new Node.Builder().id("http://foo.com/baz").rdfType(PROPERTY).propertyType(PropertyType.DATA).label("test label").meta(new Meta.Builder().addComment("test comment").build()).build())
                 .build();
         assertThat(graphDocument, equalTo(new GraphDocument.Builder().addGraph(graph).build()));
     }
@@ -312,29 +316,31 @@ public class FromOwlTest {
      */
     @Test
     public void testPropertiesHaveTypes() throws Exception{
-        String owl = "Prefix(:=<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544#>)\n" +
-                     "Prefix(owl:=<http://www.w3.org/2002/07/owl#>)\n" +
-                     "Prefix(rdf:=<http://www.w3.org/1999/02/22-rdf-syntax-ns#>)\n" +
-                     "Prefix(xml:=<http://www.w3.org/XML/1998/namespace>)\n" +
-                     "Prefix(xsd:=<http://www.w3.org/2001/XMLSchema#>)\n" +
-                     "Prefix(rdfs:=<http://www.w3.org/2000/01/rdf-schema#>)\n" +
-                     "\n" +
-                     "\n" +
-                     "Ontology(<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544>\n" +
-                     "\n" +
-                     "Declaration(Class(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000059>))\n" +
-                     "Declaration(AnnotationProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060>))\n" +
-                     "Declaration(ObjectProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000061>))\n" +
-                     "Declaration(DataProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000062>))\n" +
-                     ")";
+        String owl = """
+                     Prefix(:=<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544#>)
+                     Prefix(owl:=<http://www.w3.org/2002/07/owl#>)
+                     Prefix(rdf:=<http://www.w3.org/1999/02/22-rdf-syntax-ns#>)
+                     Prefix(xml:=<http://www.w3.org/XML/1998/namespace>)
+                     Prefix(xsd:=<http://www.w3.org/2001/XMLSchema#>)
+                     Prefix(rdfs:=<http://www.w3.org/2000/01/rdf-schema#>)
+                     
+                     
+                     Ontology(<http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544>
+                     
+                     Declaration(Class(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000059>))
+                     Declaration(AnnotationProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060>))
+                     Declaration(ObjectProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000061>))
+                     Declaration(DataProperty(<http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000062>))
+                     )
+                     """;
         GraphDocument graphDocument = generateGraphDocument(owl);
         System.out.println(OgYamlGenerator.render(graphDocument));
         Graph graph = new Graph.Builder().id("http://www.semanticweb.org/matentzn/ontologies/2021/11/untitled-ontology-544")
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000059").type(CLASS).build())
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000059").rdfType(CLASS).build())
                 // owlapi sort order - don't change this!
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000061").type(PROPERTY).propertyType(PropertyType.OBJECT).build())
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000062").type(PROPERTY).propertyType(PropertyType.DATA).build())
-                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060").type(PROPERTY).propertyType(PropertyType.ANNOTATION).build())
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000061").rdfType(PROPERTY).propertyType(PropertyType.OBJECT).build())
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000062").rdfType(PROPERTY).propertyType(PropertyType.DATA).build())
+                .addNode(new Node.Builder().id("http://purl.obolibrary.org/obo/upheno/workshop2021/TMP_0000060").rdfType(PROPERTY).propertyType(PropertyType.ANNOTATION).build())
                 .build();
         assertThat(graphDocument, equalTo(new GraphDocument.Builder().addGraph(graph).build()));
     }
